# mmer

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  test_mmer.py  test_woodbury.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst
docs/source/: api.rst  examples_index.rst  installation.rst  mixedeffectregressor.rst  mixedeffectresult.rst  multioutput.rst
docs/source/examples/: basic_fit.rst  statsmodel_comparison.rst
meml/: GMM_Tools.py  MEML.py  Train_GMM_model.py  Train_LINME-GMM.py  __init__.py  main.py  mixedml copy.py  mixedml.py  mixedml_copy.py  mixedmodel.py  utils.py
merm/: __init__.py  linalg_op.py  linop.py  mixed_model.py  mixed_model_result.py  mixedmodel.py  plots.py  random_effect.py  residual.py  slq.py  stats.py  stats_api.py  utils.py  validation.py
merm/core/: merm.py  merm_result.py  operator.py  random_effect.py  residual.py  utils.py
merm/examples/: example_3.py  example_4.py  example_5.py  exmaple_1.py  exmaple_2.py  tune.py
merm/lanczos_algorithm/: slq.py
merm/visual/: plots.py  style.py
mmer/: __init__.py
mmer/core/: mixed_effect.py  mixed_result.py  operator.py  random_effect.py  residual.py  terms.py
mmer/lanczos_algorithm/: slq.py
mmer/utils/: multi_output.py
src/mmer/: __init__.py
src/mmer/core/: __init__.py  convergence.py  corrections.py  ensemble_mixed_result.py  fixed_effect.py  inference.py  layout.py  linear_solver.py  mixed_effect.py  mixed_result.py  operator.bak  operator.py  solver.py  terms.py
src/mmer/lanczos_algorithm/: slq.py
src/mmer/utils/: multi_output.py
tests/: test_bste_vs_de.py  test_contig.py  test_contig2.py  test_dense_sparse.py  test_is2d.py  test_operator.py  test_solver.py  test_solver_and_corrections.py  test_speed.py  test_woodbury.py
