[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merm"
version = "0.1.0"
authors = [{name = "Sajad Hussaini", email = "hussaini.smsajad@gmail.com"}]
description = "MERM: Multivariate Mixed Effects Regression Model."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["regression", "mixed-effects", "machine-learning", "statistics", "multivariate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "joblib",
    "scikit-learn",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/Sajad-Hussaini/merm"
Repository = "https://github.com/Sajad-Hussaini/merm"
Issues = "https://github.com/Sajad-Hussaini/merm/issues"