[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmer"
version = "0.1.1"
authors = [{name = "Sajad Hussaini", email = "hussaini.smsajad@gmail.com"}]
description = "MMER: Multivariate Mixed Effects Regression."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["mmer", "multivariate regression", "mixed-effects", "machine-learning", "statistics", "multivariate", "GMM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",]

dependencies = [
    "numpy",
    "scipy",
    "joblib",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "nbsphinx"]

[project.urls]
Homepage = "https://github.com/Sajad-Hussaini/mmer"
Repository = "https://github.com/Sajad-Hussaini/mmer"
Issues = "https://github.com/Sajad-Hussaini/mmer/issues"